# Yourdio

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  EVENT_SOUNDSCAPES.md  GUI.md  HOW_IT_WORKS.md  LICENSE  PLAYBACK_WINDOWS.md  REPOSITORY_IMPROVEMENTS.md  THEME_INTEGRATION.md  THEME_SYSTEM.md  Yourdio.spec  analyze_reference.py  build_exe.py  event_generator.py  generate_test_midi.py  playback_audio.py  pyproject.toml  requirements-dev.txt  requirements.txt  theme_loader.py  theme_schema.yaml  yourdio.py  yourdio_gui.py
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
conan_output_1/: chapter_00.mid  chapter_01.mid  chapter_02.mid  chapter_03.mid  chapter_04.mid  chapter_05.mid  chapter_06.mid  chapter_07.mid  chapter_08.mid  chapter_09.mid  chapter_10.mid  chapter_11.mid
release_v1.0.3/: README.md
release_v1.0.3/themes/: ambient_myst.yaml  combat_intense.yaml  conan_epic.yaml  secret_of_mana.yaml  stealth_tension.yaml  tavern_carousing.yaml  victory_triumph.yaml
samples/OldWorld/: Chaos Wastes.7z  Tags, Grimoire, Tome, areas.7z
tests/: __init__.py  conftest.py  test_event_generator.py  test_theme_loader.py
themes/: darksun_wasteland.yaml  doom_e1m1.yaml
