[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourdio"
version = "1.0.1"
description = "Retro Lo-Fi algorithmic MIDI music generator with chaos theory and prime number sequences"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yourdio Contributors"}
]
keywords = ["midi", "music", "generative", "algorithmic", "lofi", "ambient", "chaos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "midiutil>=1.2.1",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "pygame>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "types-PyYAML",
]
build = [
    "pyinstaller>=5.0",
]
audio-analysis = [
    "librosa>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/kostchei/Yourdio"
Repository = "https://github.com/kostchei/Yourdio"
Issues = "https://github.com/kostchei/Yourdio/issues"

[project.scripts]
yourdio-gui = "yourdio_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yourdio*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "themes/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["midiutil.*", "pygame.*", "librosa.*"]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
    "build_exe.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
